create exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ws-rasmoo-plus
 
-server.servlet.context.path=/ws-rasplus
+server.servlet.context.path=/ws
 server.port = 8080
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/rasmooplus
